--- a/anniversary-surprise/index.html
+++ b/anniversary-surprise/index.html
@@ -21,7 +21,7 @@
 
             <div class="album-page page-left" id="turn-1">
                 <div class="greetings-page">
-                    <img src="/images/us-in-cotoletta.jpg" alt="">
+                    <img src="./images/us-in-cotoletta.jpg" alt="">
                     <h1> Happy 6th Anniversary</h1>
                     <p>&nbsp&nbsp&nbsp"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
                 </div>
