--- a/anniversary-surprise/index.html
+++ b/anniversary-surprise/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="wrapper">
         <div class="cover cover-left"></div>
-        <div class="cover cover-right turn"></div>
+        <div class="cover cover-right"></div>
 
         <div class="album">
             <!-- greetings page -->
@@ -109,7 +109,7 @@
 
                     <a href="#" class="back-profile">
                         <p>Home</p>
-                        <i class='bx bx-home'></i>
+                        <i class='bx bxs-book-content'></i>
                     </a>
                 </div>
             </div>
