add images and test foodtrip page

--- a/anniversary-surprise/index.html
+++ b/anniversary-surprise/index.html
@@ -51,12 +51,11 @@
                 <!-- page 2 -->
                 <div class="page-back">
                     <h1 class="title">To more foodtrips..</h1>
-                    <span id="span-adventure-1">Let's enjoy this crazy world together <br> </span><span id="span-adventure-2">one adventure at a time</span>
-                    <img src="./images/adventure-3.jpg" alt="">
-                    <img src="./images/adventure-2.jpg" alt="">
-                    <img src="./images/adventure-1.jpg" alt="">
-                    <img src="./images/adventure-4.jpg" alt="">
-                    <span id="span-adventure-3">and so <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;the adventure <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;begins.. <i class='bx bxs-car bx-tada' style='color:#181717' ></i></span>
+                    <img src="./images/foodtrip-1.jpg" alt="">
+                    <img src="./images/foodtrip-3.jpg" alt="">
+                    <img src="./images/foodtrip-2.jpg" alt="">
+                    <img src="./images/foodtrip-4.jpg" alt="">
+                    <span id="span-foodtrip-1">everything tastes better <br>when I'm with you <i class='bx bx-wink-smile bx-spin' ></i></span>
                     <span class="number-page">2</span>
                     <span class="nextprev-btn back" data-page="turn-1">
                         <i class="bx bx-chevron-left"></i>
