no display below 1250px

--- a/anniversary-surprise/index.html
+++ b/anniversary-surprise/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <h1 class="desktop-only"> For Desktop Only</h1>
     <div class="wrapper">
         <div class="cover cover-left"></div>
         <div class="cover cover-right"></div>
